<resources>
    <string name="app_name">DigitalDigging</string>
    <string name="search">Search</string>
    <string name="search_hint">Search…</string>
    <string name="s_followers">%s Followers</string>
    <string name="albums">Albums</string>
    <string name="singles">Singles</string>
    <string name="explicit">Explicit</string>
    <string name="artists">Artists</string>
    <string name="album">Album</string>
    <string name="album_cover">Album Cover</string>
    <string name="appears_on">Appears On</string>
    <string name="compilations">Compilations</string>
    <string name="artist_image">Artist Image</string>
    <string name="schedule_for_later_listening">Schedule for later listening</string>
    <string name="add_to_library">Add to library</string>
    <string name="recommended_tracks">Recommended Tracks</string>
    <string name="best_results">Best Results</string>
    <string name="tracks">Tracks</string>
    <string name="relevance">Relevance</string>
    <string name="popularity">Popularity</string>
    <string name="followers">Followers</string>
    <string name="release_date">Release Date</string>
    <string name="length">Length</string>
    <string name="error_icon">error_icon</string>
    <string name="no_internet_connection_error">No Internet Connection!</string>
    <string name="search_something">Search something!</string>
    <string name="search_icon">Search Icon</string>
</resources>