package com.example.digitaldigging.screens.searchscreen.state.data

interface SearchQueryData {
    val searchQuery: String
}